--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Aryan Patel",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3"
   }
 }
